--- a/src/index.slim
+++ b/src/index.slim
@@ -26,7 +26,7 @@ html lang="en"
 			.wrapper
 				.container
 					h1 USA.css
-					h2 The most American CSS stylesheet. Style your webpage with the stars and stripes as CSS backgrounds. Units are set in inches.
+					h2 The most American CSS stylesheet. Style your webpage with the stars and stripes as CSS backgrounds. Units are set in inches. 
 					.download-wrapper
 						a.button.primary href="usa.min.css" 
 							span.download Download usa.min.css
@@ -37,6 +37,7 @@ html lang="en"
 						a.twitter-share-button.share href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-size="large" data-text="USA.css – The most American CSS stylesheet. All units in inches, only 1776 bytes" data-dnt="true" data-show-count="true" Tweet
 						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 						.fb-like.facebook-share-button.share data-href="https://bennettfeely.com/usacss" data-width="100" data-layout="button_count" data-action="like" data-size="large" data-share="true"
+					h2.github Find this project on <a href="https://github.com/bennettfeely/usacss">GitHub</a>.
 		main
 			.wrapper
 				.container
