--- a/src/index.slim
+++ b/src/index.slim
@@ -37,7 +37,14 @@ html lang="en"
 						a.twitter-share-button.share href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-size="large" data-text="USA.css – The most American CSS stylesheet. All units in inches, only 1776 bytes" data-dnt="true" data-show-count="true" Tweet
 						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 						.fb-like.facebook-share-button.share data-href="https://bennettfeely.com/usacss" data-width="100" data-layout="button_count" data-action="like" data-size="large" data-share="true"
-					h2.github Find this project on <a href="https://github.com/bennettfeely/usacss">GitHub</a>.
+						.repo data-repo="bennettfeely/usacss"
+							.repo-box
+								.repo-title
+									<a class="repo-author" href="https://github.com/bennettfeely">bennettfeely</a> / <a class="repo-name" href="https://github.com/bennettfeely/usacss">usacss</a>
+								a.repo-meta href="https://github.com/bennettfeely/usacss"
+									span.repo-stars 1 star
+									span.repo-license MIT
+									span.repo-updated 1 week ago
 		main
 			.wrapper
 				.container
@@ -201,7 +208,7 @@ html lang="en"
 								code
 									div <span class="class">.usa-conic</span> {
 									div 
-										| 	<span class="comment">/* Conic CSS gradients are not supported in Firefox or IE (<a href="https://caniuse.com/#feat=css-conic-gradients">Caniuse</a>) */</span>
+										| 	<span class="comment">/* Conic gradients are supported in some browsers (<a href="https://caniuse.com/#feat=css-conic-gradients">Caniuse</a>) */</span>
 									div 	<span class="property">background</span>: <span class="function">repeating-conic-gradient</span>(
 									div 		<span class="color">#b22234</span> <span class="unit">0</span>,
 									div 		<span class="color">#b22234</span> <span class="unit">10deg</span>,
@@ -217,6 +224,7 @@ html lang="en"
 			.wrapper
 				.container
 					p &copy; 2020 <a href="https://bennettfeely.com">Bennett Feely</a> (<a href="https://twitter.com/bennettfeely">@bennettfeely</a>)<br> Released July 4, 2020<br> God Bless America!
+		script src="github.min.js"
 		javascript:
 			const buttons = document.querySelectorAll(".pattern-show-css-button");
 			buttons.forEach((button) => {
