--- a/src/index.slim
+++ b/src/index.slim
@@ -5,7 +5,7 @@ html lang="en"
 		meta charset="utf-8"
 		meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		title USA.css
-		meta name="description" content="The American CSS stylesheet. Style your webpage with the stars and stripes as CSS backgrounds. All units are set in inches."
+		meta name="description" content="The most American CSS stylesheet. Style your webpage with the stars and stripes as CSS backgrounds. All units are set in inches."
 		/ Icons
 		link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png"
 		link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png"
@@ -36,12 +36,12 @@ html lang="en"
 					.share-wrapper
 						a.twitter-share-button.share href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-size="large" data-text="USA.css – The most American CSS stylesheet. All units in inches, only 1776 bytes" data-dnt="true" data-show-count="true" Tweet
 						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-						.fb-like.facebook-share-button.share data-href="https://bennettfeely.com/usacss" data-width="100" data-layout="button_count" data-action="like" data-size="large" data-share="true"
-						.repo data-repo="bennettfeely/usacss"
+						.fb-like.facebook-share-button.share data-href="https://bennettfeely.com/usa-css" data-width="100" data-layout="button_count" data-action="like" data-size="large" data-share="true"
+						.repo data-repo="bennettfeely/usa-css"
 							.repo-box
 								.repo-title
-									<a class="repo-author" href="https://github.com/bennettfeely">bennettfeely</a> / <a class="repo-name" href="https://github.com/bennettfeely/usacss">usacss</a>
-								a.repo-meta href="https://github.com/bennettfeely/usacss"
+									<a class="repo-author" href="https://github.com/bennettfeely">bennettfeely</a> / <a class="repo-name" href="https://github.com/bennettfeely/usa-css">usa-css</a>
+								a.repo-meta href="https://github.com/bennettfeely/usa-css"
 									span.repo-stars 1 star
 									span.repo-license MIT
 									span.repo-updated 1 week ago
