--- a/src/index.slim
+++ b/src/index.slim
@@ -45,7 +45,7 @@ html lang="en"
 					.share-wrapper
 						a.twitter-share-button.share href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-size="large" data-text="USA.css – The most American CSS stylesheet. All units in inches, only 1776 bytes" data-dnt="true" data-show-count="true" Tweet
 						script async="true" src="https://platform.twitter.com/widgets.js" charset="utf-8"
-						.fb-like.facebook-share-button.share data-href="https://bennettfeely.com/usa-css" data-width="100" data-layout="button_count" data-action="like" data-size="large" data-share="false"
+						.fb-like.facebook-share-button.share data-href="https://bennettfeely.com/usacss" data-width="100" data-layout="button_count" data-action="like" data-size="large" data-share="false"
 		main
 			.wrapper
 				.container
