--- a/src/_github.scss
+++ b/src/_github.scss
@@ -42,10 +42,11 @@
 }
 
 .repo-meta {
+	font-size: smaller;
 	display: block;
 	border-top: 1px solid rgba(#c5c8c6, 0.5);
 	background: white;
-	padding: 0 0.5em;
+	padding: 0.25rem 0.5rem;
 	color: #586069;
 
 	&:hover {
