--- a/src/usa.css
+++ b/src/usa.css
@@ -12,8 +12,7 @@
 		linear-gradient(72deg, #fff 8.5%, transparent 8.5%) 0.8in 0.93in,
 		linear-gradient(288deg, #fff 8.5%, transparent 8.5%) -0.2in 0.93in,
 		linear-gradient(216deg, #fff 7.5%, transparent 7.5%) -0.2in 0.73in,
-		linear-gradient(144deg, #fff 7.5%, transparent 7.5%) 0.8in 0.73in,
-		#3c3b6e;
+		linear-gradient(144deg, #fff 7.5%, transparent 7.5%) 0.8in 0.73in, #3c3b6e;
 	background-size: 1in 1in;
 }
 
