--- a/src/index.slim
+++ b/src/index.slim
@@ -213,11 +213,11 @@ html lang="en"
 									div 	<span class="property">background</span>: <span class="function">repeating-conic-gradient</span>(
 									div 		<span class="color">#b22234</span> <span class="unit">0</span>,
 									div 		<span class="color">#b22234</span> <span class="unit">10deg</span>,
-									div 		<span class="color">#fff</span> <span class="unit">0</span>,
+									div 		<span class="unit">0</span>,
 									div 		<span class="color">#fff</span> <span class="unit">20deg</span>,
-									div 		<span class="color">#3c3b6e</span> <span class="unit">0</span>,
+									div 		<span class="unit">0</span>,
 									div 		<span class="color">#3c3b6e</span> <span class="unit">30deg</span>,
-									div 		<span class="color">#fff</span> <span class="unit">0</span>,
+									div 		<span class="unit">0</span>,
 									div 		<span class="color">#fff</span> <span class="unit">40deg</span>
 									div 	);
 									div }
