--- a/usa.css
+++ b/usa.css
@@ -1,4 +1,4 @@
-/*! USA.css | From https://bennettfeely.com */
+/*! USA.css | from https://bennettfeely.com */
 
 .usa-stars {
 	background: linear-gradient(324deg, #3c3b6e 4%, transparent 4%) -0.7in 0.43in,
